test-fixtures/invalid-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invalid-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invalid-app
  template:
    metadata:
      labels:
        app: invalid-app
    spec:
      containers:
        - name: app
          image: nginx:latest
          securityContext:
            privileged: true
            runAsUser: 1001
          resources: {}
          ports:
            - containerPort: 80
      volumes:
        - name: hostpath-vol
          hostPath:
            path: /tmp
            type: Directory
